<resources>
    <string name="app_name">다보여</string>
    <string name="login_comment1">당신이 목격한</string>
    <string name="login_comment2">사건 사고를</string>
    <string name="login_comment3">공유해보세요!</string>
    <string name="google_login">Sign in with Google</string>
    <string name="go_main">회원가입 없이 이용하기</string>
    <string name="home">홈</string>
    <string name="search">검색</string>
    <string name="writing">글쓰기</string>
    <string name="profile">프로필</string>
    <string name="writing_comment">어떤 사건 사고를 목격하셨나요?</string>
    <string name="search_comment">찾고싶은 내용을 검색해보세요</string>
    <string name="noPost">게시물이 없습니다.</string>
    <string name="modify">수정하기</string>
    <string name="detail_comment">댓글을 달아보세요.</string>
    <string name="post">작성</string>
    <string name="set_location">위치 설정</string>
    <string name="over_image">10장까지 선택해주세요.</string>
    <string name="my_profile">내프로필</string>
    <string name="back">뒤로</string>
    <string name="select_image">1 ~ 10장을 선택해주세요.</string>
    <string name="detail_select">...</string>
    <string name="delete_report">글 삭제</string>
    <string name="modify_report">글 수정</string>
    <string name="unknown_request">알 수 없는 요청입니다.</string>
    <string name="save">저장</string>
    <string name="delete">삭제</string>
    <string name="add_comment">댓글을 입력해주세요.</string>
</resources>