<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="login"
            type="com.example.daboyeo_android.ui.sign.LoginFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.sign.LoginActivity">

        <TextView
            android:id="@+id/login_comment_textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="180dp"
            android:text="@string/login_comment1"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login_comment_textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/login_comment2"
            android:textColor="@color/mainBlue"
            android:textSize="35sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_comment_textView1" />

        <TextView
            android:id="@+id/login_comment_textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/login_comment3"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_comment_textView2" />

        <Button
            android:id="@+id/login_login_button"
            android:layout_width="280dp"
            android:layout_height="50dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/login_round_button"
            android:drawableLeft="@drawable/icon_google"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="50dp"
            android:paddingBottom="10dp"
            android:text="@string/google_login"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_comment_textView3" />

        <Button
            android:id="@+id/login_noGoogle_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/go_main"
            android:textColor="@color/gray"
            android:textSize="12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_login_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>